--- a/style.css
+++ b/style.css
@@ -1,4 +1,99 @@
+@import url("https://fonts.googleapis.com/css2?family=Kumbh+Sans:wght@400;700&display=swap");
+
+html {
+	align-items: center;
+	background-color: hsl(185, 75%, 39%);
+	background-image: url(images/bg-pattern-top.svg);
+	display: flex;
+	flex-direction: column;
+	font-size: 10px;
+	font-family: "Kumbh Sans", sans-serif;
+	height: 100%;
+	justify-content: center;
+	text-align: center;
+}
+
+.card {
+	background-color: white;
+	border-radius: 10px;
+	display: flex;
+	flex-direction: column;
+	height: 350px;
+	line-height: 12px;
+	width: 350px;
+}
+
+img {
+	margin-bottom: 20px;
+	position: absolute;
+	top: -5rem;
+	border: 4px solid white;
+	border-radius: 50px;
+	height: 90px;
+}
+
+hr {
+	background-color: hsl(0, 0%, 59%);
+	width: 348px;
+}
+
+.background {
+	background-image: url(images/bg-pattern-card.svg);
+	border-top-left-radius: 10px;
+	border-top-right-radius: 10px;
+	height: 200px;
+	width: 350px;
+}
+
+.info {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	position: relative;
+}
+
+header {
+	font-size: 1.8rem;
+	font-weight: 700;
+	padding-top: 65px;
+}
+
+.age {
+	color: hsl(0, 0%, 59%);
+	font-weight: 400;
+	padding-left: 10px;
+}
+
+.city {
+	color: hsl(0, 0%, 59%);
+	font-size: 1.4rem;
+}
+
+.stats {
+	display: grid;
+	grid-template-columns: 1fr 1fr 1fr;
+	line-height: 10px;
+}
+
+.numbers {
+	display: flex;
+	font-size: 2rem;
+	font-weight: 700;
+	justify-content: center;
+	margin-bottom: 0;
+	padding-top: 12px;
+}
+
+.description {
+	color: hsl(0, 0%, 59%);
+	display: flex;
+	font-size: 1.2rem;
+	justify-content: center;
+	padding-bottom: 5px;
+}
+
 .attribution {
+	color: white;
 	font-size: 11px;
 	text-align: center;
 }
